# aoc-rs

./: Cargo.toml
src/: linked_list.rs  main.rs  nary_tree.rs  util.rs
src/year2015/: day03.rs  day11.rs  day14.rs  mod.rs
src/year2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
src/year2018/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day10.rs  day11.rs  day18.rs  day20.rs  day23.rs  mod.rs
src/year2019/: day01.rs  day04.rs  day05.rs
src/year2020/: day02.rs  day03.rs
src/year2022/: day01.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
src/year2023/: day00.rs  day03.rs  day08.rs  day10.rs  day14.rs  day15.rs
