[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.3.3"
chrono = "0.4"
clap = "2"
failure = "0.1"
failure_derive = "0.1"
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.11.0"
lazy_static = "1"
maplit = "1.0.2"
md-5 = "0.10.6"
nalgebra = "0.32.3"
native-tls = "0.2"
num = "0.4.1"
petgraph = "0.6.4"
regex = "1"
