[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.75"
clap = "2"
colored = "2.1.0"
failure = "0.1.8"
failure_derive = "0.1.8"
itertools = "0.11.0"
maplit = "1.0.2"
nalgebra = "0.32.3"
native-tls = "0.2.7"
num-integer = "0.1.45"
thiserror = "2.0.11"
